trunk&0100: alt save v2: on all pages
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@10081 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -355,11 +355,6 @@
 		<p><button id="pref-load-do" data-text="button.import"></button></p>
 	</div>
 </div>
-<!-- alternative save button -->
-<div class="module" x-on="main">
-	<button id="save-alt" data-text="button.save"></button>
-</div>
-
 <!-- changes -->
 <div class="module" x-on="changes">
 	<div id="translator_note" class="alert"></div>
@@ -452,6 +447,11 @@
 </div>
 
 </div>
+<!-- alternative save button -->
+<div class="module">
+	<button id="save-alt" data-text="button.save"></button>
+</div>
+
 
 <div id="fixed">
 	<div id="balloon">
