--- a/content/preferences.html
+++ b/content/preferences.html
@@ -356,11 +356,6 @@
 		<p><button id="pref-load-do" data-text="button.import"></button></p>
 	</div>
 </div>
-<!-- alternative save button -->
-<div class="module" x-on="main">
-	<button id="save-alt" data-text="button.save"></button>
-</div>
-
 <!-- changes -->
 <div class="module" x-on="changes">
 	<div id="translator_note" class="alert"></div>
@@ -453,6 +448,11 @@
 </div>
 
 </div>
+<!-- alternative save button -->
+<div class="module">
+	<button id="save-alt" data-text="button.save"></button>
+</div>
+
 
 <div id="fixed">
 	<div id="balloon">
