dev prefs: RTL support, screenshots fixed, modules as suggestions when typing in search box, etc.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10167 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences_dev.html
+++ b/content/preferences_dev.html
@@ -205,7 +205,6 @@
 <datalist id="modulelist">
 </datalist>
 
-<div id="alert" class="alert"></div>
 <div id="header">
 	<h1 id="title">
 		<span data-text="prefs.title"></span>
@@ -213,6 +212,12 @@
 	</h1>
 </div>
 
+<!-- Permission save required -->
+<div id="alert" class="alert">
+	<p id="alert-text"></p>
+	<button id="save" data-text="button.save"></button>
+	<div class="clear"></div>
+</div>
 
 <div id="subheader">
 	<!-- <div>
