dev prefs, played arround a bit
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10192 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences_dev.html
+++ b/content/preferences_dev.html
@@ -235,6 +235,7 @@
 <div id="content">
 	<!-- whether to view by category or view by page -->
 	<div>
+		<span class="nav">Category</span>
 		<!-- tabs for each category -->
 		<ul id="tabs" class="nav">
 		<li id="tab-main"><a data-text="tab.main"></a></li><!--
@@ -259,7 +260,15 @@
 	<!-- pane for showing modules, modules have attribute x-on which is a list
 	 of under which tabs it should be shown -->
 	<div id="main">
-		<div id="breakcrumbs">Breadcrumbs</div>
+		<div id="breadcrumbs">
+			<a href="#">AAAAAA</a>
+			<span>>></span>
+			<a href="#">BBBBBB</a>
+			<span>>></span>
+			<a href="#">CCCCCC</a>
+			<span>>></span>
+			<a href="#">DDDDDD</a>
+		</div>
 		<div id="pane">
 			<!-- Set-up -->
 			<div class="module" x-on="main all">
