--- a/content/preferences_dev.html
+++ b/content/preferences_dev.html
@@ -43,6 +43,7 @@
 	<script type="application/x-javascript" src="./lib/oauth.js"></script>
 	<script type="application/x-javascript" src="./lib/sha1.js"></script>
 	<script type="application/x-javascript" src="./lib/PluralForm.js"></script>
+	<script type="application/x-javascript" src="./lib/js-yaml.min.js"></script>
 
 	<!-- core modules -->
 	<script type="application/x-javascript" src="./redirections.js"></script>
