--- a/content/background.html
+++ b/content/background.html
@@ -19,6 +19,7 @@
 	<script type="application/x-javascript" src="./util/api.js"></script>
 	<script type="application/x-javascript" src="./util/array.js"></script>
 	<script type="application/x-javascript" src="./util/copy-button.js"></script>
+	<script type="application/x-javascript" src="./util/css.js"></script>
 	<script type="application/x-javascript" src="./util/currency.js"></script>
 	<script type="application/x-javascript" src="./util/dom.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
