load.js seperated from misc.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10237 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -25,6 +25,7 @@
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
 	<script type="application/x-javascript" src="./util/id.js"></script>
 	<script type="application/x-javascript" src="./util/links-box.js"></script>
+	<script type="application/x-javascript" src="./util/load.js"></script>
 	<script type="application/x-javascript" src="./util/local-store.js"></script>
 	<script type="application/x-javascript" src="./util/log.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
