--- a/content/preferences_dev.html
+++ b/content/preferences_dev.html
@@ -26,6 +26,7 @@
 	<script type="application/x-javascript" src="./util/inject.js"></script>
 	<script type="application/x-javascript" src="./util/layout.js"></script>
 	<script type="application/x-javascript" src="./util/links-box.js"></script>
+	<script type="application/x-javascript" src="./util/load.js"></script>
 	<script type="application/x-javascript" src="./util/local-store.js"></script>
 	<script type="application/x-javascript" src="./util/log.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
