--- a/content/preferences.html
+++ b/content/preferences.html
@@ -17,6 +17,7 @@
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/api.js"></script>
 	<script type="application/x-javascript" src="./util/array.js"></script>
+	<script type="application/x-javascript" src="./util/cookies.js"></script>
 	<script type="application/x-javascript" src="./util/copy-button.js"></script>
 	<script type="application/x-javascript" src="./util/css.js"></script>
 	<script type="application/x-javascript" src="./util/currency.js"></script>
